unpackaged/main/default/objects/Opportunity/fields/Accelerator_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Accelerator_Loan_Amount__c</fullName>
    <label>Accelerator Loan Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>