unpackaged/main/default/objects/Opportunity/fields/Advisor_Group__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Advisor_Group__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>