unpackaged/main/default/objects/Opportunity/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Affiliation</valueSetName>
    </valueSet>
</CustomField>