unpackaged/main/default/objects/Opportunity/fields/Aggregation_and_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Aggregation_and_Reporting__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Aggregation and Reporting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>