unpackaged/main/default/objects/Opportunity/fields/Annuities__c.field-meta.xml
<CustomField>
    <fullName>Annuities__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Annuities?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>