unpackaged/main/default/objects/Opportunity/fields/Annuities_Details__c.field-meta.xml
<CustomField>
    <fullName>Annuities_Details__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <inlineHelpText>Please confirm annuity carriers</inlineHelpText>
    <label>Annuities Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>