unpackaged/main/default/objects/Opportunity/fields/Avg_Client_Age__c.field-meta.xml
<CustomField>
    <fullName>Avg_Client_Age__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Avg Client Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>