unpackaged/main/default/objects/Opportunity/fields/BD_Based_Payout__c.field-meta.xml
<CustomField>
    <fullName>BD_Based_Payout__c</fullName>
    <label>BD-Based Payout %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>