unpackaged/main/default/objects/Opportunity/fields/BD_Revenue__c.field-meta.xml
<CustomField>
    <fullName>BD_Revenue__c</fullName>
    <label>BD Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>