unpackaged/main/default/objects/Opportunity/fields/Blackout_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Blackout_End_Date__c</fullName>
    <description>Used on Retirement Plan Opportunities</description>
    <label>Blackout End Date</label>
    <type>Date</type>
</CustomField>