unpackaged/main/default/objects/Opportunity/fields/Blackout_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Start_Date__c</fullName>
    <description>Used on Retirement Plan Opportunities</description>
    <label>Blackout Start Date</label>
    <type>Date</type>
</CustomField>