unpackaged/main/default/objects/Opportunity/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Retirement Plan</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
                <isActive>false</isActive>
                <label>Household</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>