unpackaged/main/default/objects/Opportunity/fields/Compliance_Review__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance Review?</label>
    <type>Checkbox</type>
</CustomField>