unpackaged/main/default/objects/Opportunity/fields/Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date__c</fullName>
    <label>Contract Date</label>
    <type>Date</type>
</CustomField>