unpackaged/main/default/objects/Opportunity/fields/Count_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Accounts__c</fullName>
    <label>Count of Accounts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>