unpackaged/main/default/objects/Opportunity/fields/Count_of_HH_s__c.field-meta.xml
<CustomField>
    <fullName>Count_of_HH_s__c</fullName>
    <label>Count of Households</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>