unpackaged/main/default/objects/Opportunity/fields/Cultural_Fit__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Fit__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Cultural Fit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>