unpackaged/main/default/objects/Opportunity/fields/Current_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Current_Affiliation__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Current Affiliation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Affiliation</valueSetName>
    </valueSet>
</CustomField>