unpackaged/main/default/objects/Opportunity/fields/Current_Custodian__c.field-meta.xml
<CustomField>
    <fullName>Current_Custodian__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Current Custodian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>