unpackaged/main/default/objects/Opportunity/fields/Current_Estate_Planning_Tool__c.field-meta.xml
<CustomField>
    <fullName>Current_Estate_Planning_Tool__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Current Estate Planning Tool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Estate_Planning_Tool</valueSetName>
    </valueSet>
</CustomField>