unpackaged/main/default/objects/Opportunity/fields/Current_Plan_Provider_s__c.field-meta.xml
<CustomField>
    <fullName>Current_Plan_Provider_s__c</fullName>
    <label>Current Plan Provider(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401Go</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>American Funds</fullName>
            </value>
            <value>
                <fullName>Ameritas</fullName>
            </value>
            <value>
                <fullName>Ascensus</fullName>
            </value>
            <value>
                <fullName>Empower</fullName>
            </value>
            <value>
                <fullName>Fidelity</fullName>
            </value>
            <value>
                <fullName>Guideline</fullName>
            </value>
            <value>
                <fullName>Human Interest</fullName>
            </value>
            <value>
                <fullName>John Hancock</fullName>
            </value>
            <value>
                <fullName>JPMorgan</fullName>
            </value>
            <value>
                <fullName>Lincoln Financial Group</fullName>
            </value>
            <value>
                <fullName>Nationwide</fullName>
            </value>
            <value>
                <fullName>NWPS</fullName>
            </value>
            <value>
                <fullName>Paychex</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Schwab</fullName>
            </value>
            <value>
                <fullName>T. Rowe Price</fullName>
            </value>
            <value>
                <fullName>The Standard</fullName>
            </value>
            <value>
                <fullName>TIAA</fullName>
            </value>
            <value>
                <fullName>Transamerica</fullName>
            </value>
            <value>
                <fullName>Vanguard</fullName>
            </value>
            <value>
                <fullName>Vestwell</fullName>
            </value>
            <value>
                <fullName>VOYA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>