unpackaged/main/default/objects/Opportunity/fields/Current_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider__c</fullName>
    <description>Used on Retirement Plan Opportunities</description>
    <label>Current Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>