unpackaged/main/default/objects/Opportunity/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <label>Custodian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fidelity</fullName>
            </value>
            <value>
                <fullName>Schwab</fullName>
            </value>
            <value>
                <fullName>Outside Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>