unpackaged/main/default/objects/Opportunity/fields/DAM_Interest_Details__c.field-meta.xml
<CustomField>
    <fullName>DAM_Interest_Details__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>DAM Interest Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>