unpackaged/main/default/objects/Opportunity/fields/Disclosure_Details__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Details__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Disclosure Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>