unpackaged/main/default/objects/Opportunity/fields/DST_1031_Interest_Details__c.field-meta.xml
<CustomField>
    <fullName>DST_1031_Interest_Details__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>DST/1031 Interest Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>