unpackaged/main/default/objects/Opportunity/fields/Estimated_AUM__c.field-meta.xml
<CustomField>
    <fullName>Estimated_AUM__c</fullName>
    <label>Estimated AUM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>