unpackaged/main/default/objects/Opportunity/fields/External_Referrer__c.field-meta.xml
<CustomField>
    <fullName>External_Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Referrer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>External Referrer: Record does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.FinServ__ReferredByContact__c</field>
            <operation>equals</operation>
            <value />
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (External Referrer)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>