unpackaged/main/default/objects/Opportunity/fields/Fee_AUM__c.field-meta.xml
<CustomField>
    <fullName>Fee_AUM__c</fullName>
    <label>Fee AUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>