unpackaged/main/default/objects/Opportunity/fields/Fee_Based_Models_Self_Managed__c.field-meta.xml
<CustomField>
    <fullName>Fee_Based_Models_Self_Managed__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <inlineHelpText>How much of the fee-based business is allocated to these self-managed models?</inlineHelpText>
    <label>% of Fee-Based Models Self-Managed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>