unpackaged/main/default/objects/Opportunity/fields/Fee_Based_Payout__c.field-meta.xml
<CustomField>
    <fullName>Fee_Based_Payout__c</fullName>
    <label>Fee-Based Payout %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>