unpackaged/main/default/objects/Opportunity/fields/Fee_Structure_for_Clients__c.field-meta.xml
<CustomField>
    <fullName>Fee_Structure_for_Clients__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Fee Structure for Clients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>