unpackaged/main/default/objects/Opportunity/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Fee</fullName>
            </value>
            <value>
                <fullName>bps</fullName>
            </value>
            <value>
                <fullName>Flat Fee + bps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>