unpackaged/main/default/objects/Opportunity/fields/Fidelity_Count__c.field-meta.xml
<CustomField>
    <fullName>Fidelity_Count__c</fullName>
    <label>Fidelity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>