unpackaged/main/default/objects/Opportunity/fields/Financial_Advisor_Team__c.field-meta.xml
<CustomField>
    <fullName>Financial_Advisor_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Advisor Team</label>
    <referenceTo>Financial_Advisor_Team__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>