unpackaged/main/default/objects/Opportunity/fields/Forgivable_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forgivable_Loan_Amount__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Forgivable Loan Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>