unpackaged/main/default/objects/Opportunity/fields/Forgivable_Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Forgivable_Loan_Term__c</fullName>
    <label>Forgivable Loan Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5YR</fullName>
            </value>
            <value>
                <fullName>7YR</fullName>
            </value>
            <value>
                <fullName>10YR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>