unpackaged/main/default/objects/Opportunity/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <description>Used on Retirement Plan Opportunities</description>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>