unpackaged/main/default/objects/Opportunity/fields/haveDocsBeenSent__c.field-meta.xml
<CustomField>
    <fullName>haveDocsBeenSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>haveDocsBeenSent</label>
    <type>Checkbox</type>
</CustomField>