unpackaged/main/default/objects/Opportunity/fields/Home_Office_Visit__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Visit__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Home Office Visit</label>
    <type>Date</type>
</CustomField>