unpackaged/main/default/objects/Opportunity/fields/How_You_Manage_Assets__c.field-meta.xml
<CustomField>
    <fullName>How_You_Manage_Assets__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>How do you manage assets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>How_You_Manage_Assets</valueSetName>
    </valueSet>
</CustomField>