unpackaged/main/default/objects/Opportunity/fields/IAPD_BrokerCheck__c.field-meta.xml
<CustomField>
    <fullName>IAPD_BrokerCheck__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>IAPD/BrokerCheck</label>
    <type>Url</type>
</CustomField>