unpackaged/main/default/objects/Opportunity/fields/Internal_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Internal_Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Referrer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>