unpackaged/main/default/objects/Opportunity/fields/Internal_Referrer_DRP__c.field-meta.xml
<CustomField>
    <fullName>Internal_Referrer_DRP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Diversify Related Person</inlineHelpText>
    <label>Internal Referrer (DRP)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>DRP: Record does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Diversify Related Person</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Internal Referrer (DRP))</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>