unpackaged/main/default/objects/Opportunity/fields/isDocsReady__c.field-meta.xml
<CustomField>
    <fullName>isDocsReady__c</fullName>
    <formula>isDocsReady_Count__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isDocsReady</label>
    <type>Checkbox</type>
</CustomField>