unpackaged/main/default/objects/Opportunity/fields/isDocsReady_Count__c.field-meta.xml
<CustomField>
    <fullName>isDocsReady_Count__c</fullName>
    <label>isDocsReady Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>