unpackaged/main/default/objects/Opportunity/fields/isFidelity__c.field-meta.xml
<CustomField>
    <fullName>isFidelity__c</fullName>
    <formula>Fidelity_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isFidelity</label>
    <type>Checkbox</type>
</CustomField>