unpackaged/main/default/objects/Opportunity/fields/isFidelityComplete__c.field-meta.xml
<CustomField>
    <fullName>isFidelityComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFidelityComplete</label>
    <type>Checkbox</type>
</CustomField>