unpackaged/main/default/objects/Opportunity/fields/isSchwab__c.field-meta.xml
<CustomField>
    <fullName>isSchwab__c</fullName>
    <formula>Schwab_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isSchwab</label>
    <type>Checkbox</type>
</CustomField>