unpackaged/main/default/objects/Opportunity/fields/isSchwabComplete__c.field-meta.xml
<CustomField>
    <fullName>isSchwabComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSchwabComplete</label>
    <type>Checkbox</type>
</CustomField>