unpackaged/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cultural/Strategic Fit</fullName>
            </value>
            <value>
                <fullName>Timing/Not Ready</fullName>
            </value>
            <value>
                <fullName>Stayed with Current Firm</fullName>
            </value>
            <value>
                <fullName>Chose Another Firm</fullName>
            </value>
            <value>
                <fullName>Started Own RIA</fullName>
            </value>
            <value>
                <fullName>Economics/Deal Terms</fullName>
            </value>
            <value>
                <fullName>Platform/Services Fit</fullName>
            </value>
            <value>
                <fullName>Compliance/Risk Concern</fullName>
            </value>
            <value>
                <fullName>No Decision</fullName>
            </value>
            <value>
                <fullName>Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>Circumstances Changed</fullName>
            </value>
            <value>
                <fullName>Withdrew from Planning Process</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>