unpackaged/main/default/objects/Opportunity/fields/Lost_Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Lost_Other_Details__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Lost - Other Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>